[package]
name = "oscilloscope-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embedded-hal = "1.0.0"
libm = "0.2.8"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.1"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
